crates/modor/tests/compilation/compile_fail/entity_with_system_as_self_action.rs
extern crate modor;

use modor::*;

struct Entity;

#[entity]
//~^ error: the trait bound `EntityAction: EntityMainComponent` is not satisfied
impl Entity {
    #[run_as(entity(Self))]
    fn f() {}
}

fn main() {}
